feat: adds bulk messages posting api
